refactor(gui): back button configuration for search, post, subreddit, settings activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Redditech">
         <activity
-            android:name=".activity.PostActivity"
+            android:name=".activity.PostPageActivity"
             android:exported="false" />
         <activity
             android:name=".activity.SubredditActivity"
